// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> changes the class when hovered 1`] = `
<a
  className="my-normals"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "red",
      "textTransform": "uppercase",
    }
  }
>
  Facebook
</a>
`;

exports[`<Link /> changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "red",
      "textTransform": "uppercase",
    }
  }
>
  Facebook
</a>
`;

exports[`<Link /> changes the class when hovered 3`] = `
<a
  className="my-normals"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "red",
      "textTransform": "uppercase",
    }
  }
>
  Facebook
</a>
`;

exports[`<Link /> properly escapes quotes 1`] = `
<a
  className="my-normals"
  href="/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "red",
      "textTransform": "uppercase",
    }
  }
>
  "Facebook" \\'is \\ 'awesome'
</a>
`;

exports[`<Link /> renders as an anchor when no page is set 1`] = `
<a
  className="my-normals"
  href="/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "red",
      "textTransform": "uppercase",
    }
  }
>
  Facebook
</a>
`;

exports[`<Link /> renders correctly 1`] = `
<a
  className="my-normals"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "red",
      "textTransform": "uppercase",
    }
  }
>
  Facebook
</a>
`;
